# user-aports

./: .gitignore  .travis.yml  README.adoc
.github/workflows/: ci.yml
.travis/: buildrepo  deploy-key.enc  deploy-key.pub  install-alpine  repositories  setup-alpine
backports/alpine-zsh-config/: APKBUILD
backports/avizo/: APKBUILD  pr-31.patch  pr-32.patch  pr-33.patch
backports/busybox/: APKBUILD
backports/collectd/: APKBUILD
backports/connman-resolvconf/: APKBUILD
backports/convfmt/: APKBUILD
backports/dmg2img/: APKBUILD
backports/dnsmasq/: APKBUILD
backports/dummy/: APKBUILD
backports/duperemove/: APKBUILD
backports/fprintd/: APKBUILD
backports/freeradius/: APKBUILD
backports/gitlab-runner/: APKBUILD  gitlab-runner.confd  gitlab-runner.initd
backports/glib-networking/: APKBUILD
backports/gpgme/: APKBUILD  gpgme.post-upgrade
backports/grimshot/: APKBUILD
backports/gtk4.0/: APKBUILD
backports/guacamole-dotool/: APKBUILD
backports/hfsfuse/: APKBUILD
backports/hfsprogs/: APKBUILD
backports/ivykis/: APKBUILD
backports/kea/: APKBUILD  implement-command-status-get.patch
backports/kea-hook-runscript/: APKBUILD
backports/kooha/: APKBUILD
backports/lasem/: APKBUILD
backports/ldap-passwd-webui/: APKBUILD  settings.patch
backports/libgit2/: APKBUILD
backports/libplist/: APKBUILD
backports/libtirpc/: APKBUILD
backports/log4cplus/: APKBUILD
backports/lua-date/: APKBUILD
backports/lxc/: APKBUILD
backports/mingetty/: fix-makefile.patch
testing/suitesparse/.trash/: APKBUILD.new  Makefile.am  configure.ac
(+613 files in other folders)
