AC_INIT(SuiteSparse, 4.5.3)

#AC_CONFIG_FILES([SuiteSparse_config/Makefile
#		AMD/Makefile
#		COLAMD/Makefile])
AC_CONFIG_FILES([Makefile])

#AC_CONFIG_SUBDIRS([SuiteSparse_config AMD COLAMD CAMD CCOLAMD CXSparse RBio LDL BTF CHOLMOD KLU SPQR UMFPACK])
AC_CONFIG_SUBDIRS([SuiteSparse_config AMD COLAMD])

AC_OUTPUT
